--- a/team/css/team.css
+++ b/team/css/team.css
@@ -1,3 +1,13 @@
+a {
+    text-decoration:none;
+    color:inherit;
+}
+a:hover {
+    text-decoration: none;
+    color:inherit;
+    opacity:0.5;
+}
+
 .container {
   max-width: 960px;
 }
